--- a/web/index.html
+++ b/web/index.html
@@ -12,19 +12,67 @@
         }
       }
     </script>
+    <style>
+      [v-cloak] {
+        display: none;
+      }
+    </style>
   </head>
-  <body>
-    <div id="app">
+  <body class="bg-[url('/assets/background.jpg')] bg-repeat">
+    <div id="app" v-cloak>
+      <div class="fixed top-2 left-2 bg-white p-3 w-max border rounded-md space-y-1 text-center">
+        <h1 class="text-lg font-bold">Cursor Party 🥳</h1>
+        <p v-if="isConnected" class="text-xs">Users connected: {{ onlineCursorsCount }}</p>
+      </div>
+      <div class="h-screen w-screen grid items-center justify-center">
+        <div v-if="!isConnected" class="w-max rounded-md border p-3 bg-white">
+          <div class="mb-3 space-y-3">
+            <h1 class="font-bold text-lg">Welcome!</h1>
+            <hr />
+          </div>
+          <form @submit.prevent="joinWebsocket" class="space-y-2">
+            <div class="flex flex-col max-w-xl">
+              <label for="username" class="block mb-2 text-sm font-medium text-gray-900">
+                Username
+              </label>
+              <input
+                v-model="username"
+                type="text"
+                id="username"
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-blue-500 focus:border-blue-500 block w-full py-1.5 px-2.5"
+                placeholder="Immanuel Kant"
+                maxlength="12"
+                required
+              />
+            </div>
+            <button
+              class="font-bold bg-black rounded-md flex justify-center items-center text-white w-16 py-1.5"
+            >
+              <span v-if="!isConnecting">Join</span>
+              <img v-else class="h-6" src="assets/loading.svg" />
+            </button>
+          </form>
+        </div>
+      </div>
       <div
-        v-cloak
-        v-for="(position, id) in onlineCursors"
+        v-for="(cursor, id) in onlineCursors"
         :key="id"
-        :style="{ top: position.y + 'px', left: position.x + 'px' }"
+        :style="{ top: cursor.y + 'px', left: cursor.x + 'px' }"
         class="absolute"
       >
-        <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M7.407 2.486c-.917-.612-2.251.046-2.152 1.238l.029.347a86.016 86.016 0 0 0 2.79 15.693c.337 1.224 2.03 1.33 2.544.195l2.129-4.697c.203-.449.697-.737 1.234-.68l5.266.564c1.209.13 2.063-1.346 1.094-2.281A90.863 90.863 0 0 0 7.703 2.684z"/></svg>
-        <p class="text-xs font-mono">id: {{ id }}</p>
-        <p class="text-xs font-mono">x: {{ position.x }} | y: {{ position.y }}</p>
+        <svg
+          class="h-5 w-5"
+          xmlns="http://www.w3.org/2000/svg"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+        >
+          <path
+            fill="currentColor"
+            d="M7.407 2.486c-.917-.612-2.251.046-2.152 1.238l.029.347a86.016 86.016 0 0 0 2.79 15.693c.337 1.224 2.03 1.33 2.544.195l2.129-4.697c.203-.449.697-.737 1.234-.68l5.266.564c1.209.13 2.063-1.346 1.094-2.281A90.863 90.863 0 0 0 7.703 2.684z"
+          />
+        </svg>
+        <p class="text-xs font-mono">{{ cursor.username }}</p>
       </div>
     </div>
     <script type="module" src="index.js"></script>
